# mili

./: FFI_BRIDGE_GUIDE.md  analysis_options.yaml  ffigen.yaml  install.md  jnigen.yaml  pubspec.yaml  sequence.md
.dart_tool/: package_config.json  package_graph.json
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: build.gradle  build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: milibris_reader_android.cpp
android/src/main/kotlin/com/theodo/milibris_ffi/: MilibrisFFIPlugin.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist  MilibrisReaderBridge.swift
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  test_colors.dart
example/lib/test/: widget_test.dart
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: milibris_ffi.podspec  milibris_reader.podspec
ios/Classes/: MilibrisReaderBirgde.swift
lib/: milibris_ffi.dart  milibris_reader.dart  milibris_reader_bindings_generated.dart  native_add.dart  native_add_bindings_generated.dart
lib/src/: reader_customization.dart
lib/src/android/: milibris_ffi_android.dart  milibris_ffi_bindings.g.dart  milibris_ffi_jni.dart  milibris_ffi_service_android.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  milibris_reader.h  native_add.h
tool/: README.md  generate_android_colors.dart  generate_code.dart
(+11 files in other folders)
